# Snake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Field.cpp  Field.h  Game.cpp  Game.h  Interface.cpp  Interface.h  Snake.cpp  Snake.h
